feat: Adicionado nova forma de gerar arquivo estátio

--- a/generators/templates/page/index.js.hbs
+++ b/generators/templates/page/index.js.hbs
@@ -1,3 +1,5 @@
-﻿import {{pascalCase route}} from '../../views/{{pascalCase route}}';
+﻿import { {{pascalCase route}} } from 'views'; 
 
-export default {{pascalCase route}};
+export default function {{pascalCase route}}Page() {
+  return <{{pascalCase route}} />;
+}
