--- a/src/globals.scss
+++ b/src/globals.scss
@@ -13,3 +13,10 @@ body {
   font-size: 16px;
   height: 100%;
 }
+
+button {
+  border: none;
+  margin: 0;
+  padding: 0;
+  background: transparent;
+}
