--- a/src/views/Marmitas/Marmitas.module.scss
+++ b/src/views/Marmitas/Marmitas.module.scss
@@ -9,3 +9,17 @@
     grid-auto-rows: unset;
   }
 }
+
+.sectionWrapper {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  margin-bottom: 3rem;
+  gap: 3rem;
+
+  @media (min-width: 960px) {
+    gap: 0;
+  }
+}
