chore: Finalizado gerador automatico de arquivos

--- a/generators/templates/view/index.js.hbs
+++ b/generators/templates/view/index.js.hbs
@@ -5,7 +5,7 @@ import style from './{{pascalCase route}}.module.scss'
 
 export default function {{pascalCase route}}() { 
   return (
-    <Layout session={'TESTE'}>
+    <Layout session={'{{pascalCase route}}'}>
       <Container className='py-5'>
 
         <div style={style.content}>
