feat: Criado componente de input

--- a/src/globals.scss
+++ b/src/globals.scss
@@ -1,10 +1,14 @@
+*,
+** {
+  outline: 0;
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-}
-
-*,
-** {
-  box-sizing: content-box;
+  font-size: 16px;
 }
