--- a/src/views/Home/Home.module.scss
+++ b/src/views/Home/Home.module.scss
@@ -1,3 +1,10 @@
 .content {
   margin-top: 20px;
 }
+
+.provisoru {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  grid-gap: 14px;
+}
