--- a/src/views/Marmitas/components/SectionButton/SectionButton.module.scss
+++ b/src/views/Marmitas/components/SectionButton/SectionButton.module.scss
@@ -3,17 +3,22 @@ $yellow: #ffc107;
 $light-blue: #0dcaf0;
 $gray: #6c757d;
 
-.button {
+.slotContent {
   width: 9.1rem;
   height: 3rem;
   color: #fff;
   font-weight: 500;
   border-radius: 4px;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   background-color: $green;
   transition: 0.5s background ease;
 
   &:hover {
+    color: white;
     background-color: darken($green, 10%);
   }
 
