--- a/src/views/Marmitas/Estatistica/statistics_page.module.scss
+++ b/src/views/Marmitas/Estatistica/statistics_page.module.scss
@@ -1,3 +1,17 @@
+.formWrapper {
+  display: flex;
+  gap: 0.8rem;
+  flex-direction: column;
+  align-items: flex-end;
+
+  @media (min-width: 960px) {
+    gap: 1.5rem;
+    flex-direction: row;
+    align-items: center;
+    justify-content: end;
+  }
+}
+
 .wrapper {
   display: grid;
   grid-template-columns: 1fr;
