--- a/src/views/Marmitas/Home/Marmitas.module.scss
+++ b/src/views/Marmitas/Home/Marmitas.module.scss
@@ -11,15 +11,15 @@
 }
 
 .sectionWrapper {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  place-items: center;
 
   margin-bottom: 3rem;
-  gap: 3rem;
+  grid-gap: 1rem;
 
   @media (min-width: 960px) {
-    gap: 0;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1rem;
   }
 }
