--- a/src/views/Marmitas/components/SectionButton/SectionButton.module.scss
+++ b/src/views/Marmitas/components/SectionButton/SectionButton.module.scss
@@ -8,7 +8,7 @@ $gray: #6c757d;
 @import '/node_modules/bootstrap/scss/mixins';
 
 .slotContent {
-  width: 9.1rem;
+  width: 100%;
   height: 3rem;
   color: #fff;
   font-weight: 500;
@@ -50,5 +50,9 @@ $gray: #6c757d;
     &:hover {
       background-color: darken($secondary, 10%);
     }
+  }
+
+  @media (min-width: 960px) {
+    width: 9.1rem;
   }
 }
